@@ -1,4 +1,46 @@
 {
+  "__inputs": [
+    {
+      "name": "DS_PROMETHEUS",
+      "label": "prometheus",
+      "description": "",
+      "type": "datasource",
+      "pluginId": "prometheus",
+      "pluginName": "Prometheus"
+    }
+  ],
+  "__requires": [
+    {
+      "type": "grafana",
+      "id": "grafana",
+      "name": "Grafana",
+      "version": "5.2.3"
+    },
+    {
+      "type": "panel",
+      "id": "graph",
+      "name": "Graph",
+      "version": "5.0.0"
+    },
+    {
+      "type": "datasource",
+      "id": "prometheus",
+      "name": "Prometheus",
+      "version": "5.0.0"
+    },
+    {
+      "type": "panel",
+      "id": "singlestat",
+      "name": "Singlestat",
+      "version": "5.0.0"
+    },
+    {
+      "type": "panel",
+      "id": "table",
+      "name": "Table",
+      "version": "5.0.0"
+    }
+  ],
   "annotations": {
     "list": [
       {
@@ -16,7 +58,8 @@
   "editable": true,
   "gnetId": null,
   "graphTooltip": 0,
-  "iteration": 1527507433164,
+  "id": null,
+  "iteration": 1536240081130,
   "links": [],
   "panels": [
     {
@@ -96,7 +139,7 @@
       "tableColumn": "",
       "targets": [
         {
-          "expr": "100 - (avg by (instance) (rate(node_cpu{mode=\"idle\", job=~'$job'}[$rate_interval])) * 100)",
+          "expr": "100 - (avg by (instance) (rate(node_cpu_seconds_total{mode=\"idle\", job=~'$job'}[$rate_interval])) * 100)",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 2,
@@ -182,7 +225,7 @@
       "tableColumn": "",
       "targets": [
         {
-          "expr": "1 - (node_memory_MemFree{job=~'$job'} + node_memory_Buffers{job=~'$job'} + node_memory_Cached{job=~'$job'}) / node_memory_MemTotal{job=~'$job'}",
+          "expr": "1 - (node_memory_MemFree_bytes{job=~'$job'} + node_memory_Buffers_bytes{job=~'$job'} + node_memory_Cached_bytes{job=~'$job'}) / node_memory_MemTotal_bytes{job=~'$job'}",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 1,
@@ -269,7 +312,7 @@
       "tableColumn": "",
       "targets": [
         {
-          "expr": "1 - min(node_filesystem_free{job=~'$job', mountpoint=~'$filesystem'} / node_filesystem_size{job=~'$job', mountpoint=~'$filesystem'})",
+          "expr": "1 - min(node_filesystem_free_bytes{job=~'$job', mountpoint=~'$filesystem'} / node_filesystem_size_bytes{job=~'$job', mountpoint=~'$filesystem'})",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 1,
@@ -356,7 +399,7 @@
       "tableColumn": "",
       "targets": [
         {
-          "expr": "node_memory_SwapCached{job=~'$job'} / (node_memory_SwapCached{job=~'$job'} + node_memory_SwapFree{job=~'$job'})",
+          "expr": "node_memory_SwapCached_bytes{job=~'$job'} / (node_memory_SwapCached_bytes{job=~'$job'} + node_memory_SwapFree_bytes{job=~'$job'})",
           "format": "time_series",
           "intervalFactor": 2,
           "legendFormat": "",
@@ -1117,7 +1160,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "sum by (mode) (rate(node_cpu{mode!='idle', job=~'$job'}[$rate_interval]))",
+          "expr": "sum by (mode) (rate(node_cpu_seconds_total{mode!='idle', job=~'$job'}[$rate_interval]))",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -1206,7 +1249,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "sum by (cpu) (irate(node_cpu{mode!='idle', job=~'$job'}[$rate_interval]))",
+          "expr": "sum by (cpu) (irate(node_cpu_seconds_total{mode!='idle', job=~'$job'}[$rate_interval]))",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -1321,7 +1364,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "node_memory_MemTotal{job=~'$job'} - (node_memory_MemFree{job=~'$job'} + node_memory_Buffers{job=~'$job'} + node_memory_Cached{job=~'$job'})",
+          "expr": "node_memory_MemTotal_bytes{job=~'$job'} - (node_memory_MemFree_bytes{job=~'$job'} + node_memory_Buffers_bytes{job=~'$job'} + node_memory_Cached_bytes{job=~'$job'})",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 1,
@@ -1330,7 +1373,7 @@
           "step": 30
         },
         {
-          "expr": "node_memory_Buffers{job=~'$job'}",
+          "expr": "node_memory_Buffers_bytes{job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 1,
@@ -1339,7 +1382,7 @@
           "step": 30
         },
         {
-          "expr": "node_memory_Cached{job=~'$job'}",
+          "expr": "node_memory_Cached_bytes{job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 1,
@@ -1348,7 +1391,7 @@
           "step": 30
         },
         {
-          "expr": "node_memory_MemFree{job=~'$job'}",
+          "expr": "node_memory_MemFree_bytes{job=~'$job'}",
           "format": "time_series",
           "intervalFactor": 1,
           "legendFormat": "Free",
@@ -1436,7 +1479,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "node_memory_Dirty{job=~'$job'}",
+          "expr": "node_memory_Dirty_bytes{job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -1534,7 +1577,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "node_memory_SwapCached{job=~'$job'}",
+          "expr": "node_memory_SwapCached_bytes{job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -1545,7 +1588,7 @@
           "step": 240
         },
         {
-          "expr": "node_memory_SwapFree{job=~'$job'}",
+          "expr": "node_memory_SwapFree_bytes{job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 2,
@@ -1621,7 +1664,7 @@
       "fill": 5,
       "gridPos": {
         "h": 7,
-        "w": 12,
+        "w": 8,
         "x": 0,
         "y": 30
       },
@@ -1646,13 +1689,6 @@
       "renderer": "flot",
       "repeat": "filesystem",
       "repeatDirection": "h",
-      "scopedVars": {
-        "filesystem": {
-          "selected": false,
-          "text": "/",
-          "value": "/"
-        }
-      },
       "seriesOverrides": [
         {
           "alias": "/Used.*$/",
@@ -1670,7 +1706,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "node_filesystem_size{mountpoint=~'$filesystem', job=~'$job'} - node_filesystem_avail{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
+          "expr": "node_filesystem_size_bytes{mountpoint=~'$filesystem', job=~'$job'} - node_filesystem_avail_bytes{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 2,
@@ -1680,131 +1716,7 @@
           "step": 120
         },
         {
-          "expr": "node_filesystem_avail{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
-          "format": "time_series",
-          "hide": false,
-          "intervalFactor": 2,
-          "legendFormat": "Free \"{{mountpoint}}\" ({{device}}, {{fstype}})",
-          "metric": "node_filesystem_avail",
-          "refId": "A",
-          "step": 120
-        }
-      ],
-      "thresholds": [],
-      "timeFrom": null,
-      "timeShift": null,
-      "title": "Filesystem - \"$filesystem\"",
-      "tooltip": {
-        "shared": true,
-        "sort": 0,
-        "value_type": "individual"
-      },
-      "transparent": false,
-      "type": "graph",
-      "xaxis": {
-        "buckets": null,
-        "mode": "time",
-        "name": null,
-        "show": true,
-        "values": []
-      },
-      "yaxes": [
-        {
-          "format": "bytes",
-          "label": "",
-          "logBase": 1,
-          "max": null,
-          "min": "0",
-          "show": true
-        },
-        {
-          "format": "short",
-          "label": null,
-          "logBase": 1,
-          "max": null,
-          "min": null,
-          "show": true
-        }
-      ],
-      "yaxis": {
-        "align": false,
-        "alignLevel": null
-      }
-    },
-    {
-      "aliasColors": {
-        "Free \"/\" (/dev/sda1, ext4)": "#629E51",
-        "Used \"/\" (/dev/sda1, ext4)": "#E5AC0E"
-      },
-      "bars": false,
-      "dashLength": 10,
-      "dashes": false,
-      "datasource": "prometheus",
-      "fill": 5,
-      "gridPos": {
-        "h": 7,
-        "w": 12,
-        "x": 12,
-        "y": 30
-      },
-      "id": 99,
-      "legend": {
-        "avg": false,
-        "current": false,
-        "max": false,
-        "min": false,
-        "show": true,
-        "total": false,
-        "values": false
-      },
-      "lines": true,
-      "linewidth": 2,
-      "links": [],
-      "minSpan": null,
-      "nullPointMode": "null",
-      "percentage": false,
-      "pointradius": 5,
-      "points": false,
-      "renderer": "flot",
-      "repeat": null,
-      "repeatDirection": "h",
-      "repeatIteration": 1527507433164,
-      "repeatPanelId": 32,
-      "scopedVars": {
-        "filesystem": {
-          "selected": false,
-          "text": "/mnt",
-          "value": "/mnt"
-        }
-      },
-      "seriesOverrides": [
-        {
-          "alias": "/Used.*$/",
-          "color": "#BF1B00"
-        },
-        {
-          "alias": "/^Free .*$/",
-          "color": "#629E51",
-          "fill": 1
-        },
-        {}
-      ],
-      "spaceLength": 10,
-      "stack": true,
-      "steppedLine": false,
-      "targets": [
-        {
-          "expr": "node_filesystem_size{mountpoint=~'$filesystem', job=~'$job'} - node_filesystem_avail{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
-          "format": "time_series",
-          "hide": false,
-          "intervalFactor": 2,
-          "legendFormat": "Used \"{{mountpoint}}\" ({{device}}, {{fstype}})",
-          "metric": "node_filesystem_si",
-          "refId": "B",
-          "step": 120
-        },
-        {
-          "expr": "node_filesystem_avail{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
+          "expr": "node_filesystem_avail_bytes{mountpoint=~'$filesystem', device!~'rootfs', job=~'$job'}",
           "format": "time_series",
           "hide": false,
           "intervalFactor": 2,
@@ -1908,11 +1820,11 @@
       "renderer": "flot",
       "seriesOverrides": [],
       "spaceLength": 10,
-      "stack": true,
+      "stack": false,
       "steppedLine": false,
       "targets": [
         {
-          "expr": "-1 * irate(node_disk_writes_completed{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_disk_writes_completed_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -1922,7 +1834,7 @@
           "step": 120
         },
         {
-          "expr": "-1 * irate(node_disk_writes_merged{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_disk_writes_merged_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -1931,7 +1843,7 @@
           "step": 120
         },
         {
-          "expr": "irate(node_disk_reads_completed{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_disk_reads_completed_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -1941,7 +1853,7 @@
           "step": 120
         },
         {
-          "expr": "irate(node_disk_reads_merged{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_disk_reads_merged_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "intervalFactor": 2,
           "legendFormat": "Reads (merged) {{device}}",
@@ -2026,11 +1938,11 @@
       "renderer": "flot",
       "seriesOverrides": [],
       "spaceLength": 10,
-      "stack": true,
+      "stack": false,
       "steppedLine": false,
       "targets": [
         {
-          "expr": "-1 * irate(node_disk_bytes_written{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_disk_written_bytes_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -2040,7 +1952,7 @@
           "step": 120
         },
         {
-          "expr": "irate(node_disk_bytes_read{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_disk_read_bytes_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -2130,7 +2042,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "-1 * irate(node_disk_write_time_ms{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_disk_write_time_seconds_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -2141,7 +2053,7 @@
           "step": 120
         },
         {
-          "expr": "irate(node_disk_read_time_ms{device=~'$disk', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_disk_read_time_seconds_total{device=~'$disk', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -2170,7 +2082,7 @@
       },
       "yaxes": [
         {
-          "format": "ms",
+          "format": "s",
           "label": "Read/Write Time",
           "logBase": 1,
           "max": null,
@@ -2243,7 +2155,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "irate(node_network_receive_bytes{device=~'$interface', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_network_receive_bytes_total{device=~'$interface', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -2254,7 +2166,7 @@
           "step": 60
         },
         {
-          "expr": "-1 * irate(node_network_transmit_bytes{device=~'$interface', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_network_transmit_bytes_total{device=~'$interface', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -2341,7 +2253,7 @@
       "steppedLine": false,
       "targets": [
         {
-          "expr": "irate(node_network_receive_packets{device=~'$interface', job=~'$job'}[$rate_interval])",
+          "expr": "irate(node_network_receive_packets_total{device=~'$interface', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "hide": false,
           "interval": "",
@@ -2352,7 +2264,7 @@
           "step": 120
         },
         {
-          "expr": "-1 * irate(node_network_transmit_packets{device=~'$interface', job=~'$job'}[$rate_interval])",
+          "expr": "-1 * irate(node_network_transmit_packets_total{device=~'$interface', job=~'$job'}[$rate_interval])",
           "format": "time_series",
           "interval": "",
           "intervalFactor": 2,
@@ -5112,10 +5024,7 @@
     "list": [
       {
         "allValue": null,
-        "current": {
-          "text": "localhost",
-          "value": "localhost"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": false,
@@ -5135,10 +5044,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "text": "10/main",
-          "value": "10/main"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": false,
@@ -5158,10 +5064,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "text": "All",
-          "value": "$__all"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 2,
         "includeAll": true,
@@ -5181,11 +5084,7 @@
       },
       {
         "allValue": "",
-        "current": {
-          "selected": true,
-          "text": "All",
-          "value": "$__all"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": true,
@@ -5247,12 +5146,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "text": "All",
-          "value": [
-            "$__all"
-          ]
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": true,
@@ -5260,7 +5154,7 @@
         "multi": true,
         "name": "disk",
         "options": [],
-        "query": "label_values(node_disk_bytes_written, device)",
+        "query": "label_values(node_disk_written_bytes_total, device)",
         "refresh": 2,
         "regex": "",
         "sort": 0,
@@ -5324,10 +5218,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "text": "All",
-          "value": "$__all"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": true,
@@ -5335,7 +5226,7 @@
         "multi": false,
         "name": "interface",
         "options": [],
-        "query": "label_values(node_network_receive_bytes, device)",
+        "query": "label_values(node_network_receive_bytes_total, device)",
         "refresh": 2,
         "regex": "",
         "sort": 0,
@@ -5347,12 +5238,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "text": "All",
-          "value": [
-            "$__all"
-          ]
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": true,
@@ -5360,7 +5246,7 @@
         "multi": true,
         "name": "filesystem",
         "options": [],
-        "query": "label_values(node_filesystem_size{job='$job'}, mountpoint)",
+        "query": "label_values(node_filesystem_size_bytes{job='$job'}, mountpoint)",
         "refresh": 2,
         "regex": "(?!/media).*",
         "sort": 1,
@@ -5372,11 +5258,7 @@
       },
       {
         "allValue": null,
-        "current": {
-          "selected": true,
-          "text": "All",
-          "value": "$__all"
-        },
+        "current": {},
         "datasource": "prometheus",
         "hide": 0,
         "includeAll": true,
